--- a/music1.html
+++ b/music1.html
@@ -8,7 +8,7 @@
 	<nav class="menu">
 		<a href="photos.html"><img src="cvety.jpg"><p>Мои фото</p></a><br>
 		<a href="video.html"><img src="youtube.jpg"><p>Мои видео</p></a><br>
-		<a href="indexfinalineedit.html"><img src="home.jpg"><p>Главная страница</p></a><br>
+		<a href="index.html"><img src="home.jpg"><p>Главная страница</p></a><br>
 	</nav>
 	<h1>Moya musika</h1>
 	<audio controls src="heavy.mp3"></audio>
