--- a/photos.html
+++ b/photos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<nav class="menu">
-		<a href="indexfinalineedit.html"><img src="home.jpg"><p>Главная страница</p></a><br>
+		<a href="index.html"><img src="home.jpg"><p>Главная страница</p></a><br>
 		<a href="video.html"><img src="youtube.jpg"><p>Мои видео</p></a><br>
 		<a href="music1.html"><img src="music.jpg"><p>Мои музыка</p></a><br>
 	</nav>
