--- a/video.html
+++ b/video.html
@@ -7,7 +7,7 @@
 <body>
 	<nav class="menu">
 		<a href="photos.html"><img src="cvety.jpg"><p>Мои фото</p></a><br>
-		<a href="indexfinalineedit.html"><img src="home.jpg"><p>Главная страница</p></a><br>
+		<a href="index.html"><img src="home.jpg"><p>Главная страница</p></a><br>
 		<a href="music1.html"><img src="music.jpg"><p>Мои музыка</p></a><br>
 	</nav>
 	<h1>Moi video</h1>
