доделал проект добавил текст и картинки

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 		<a href="music1.html"><img src="music.jpg"><p>Мои музыка</p></a><br>
 	</nav>
 	<h1>Мой сайт</h1>
+	<p>Привет Я Никита. Мне 13 лет. Увлекаюсь футболом,шахматами. Учусь в Лицее Номер 100.</p>
 </body>
 </html>
