--- a/photos.html
+++ b/photos.html
@@ -12,7 +12,9 @@
 		<a href="music1.html"><img src="music.jpg"><p>Мои музыка</p></a><br>
 	</nav>
 	<h1>Мои фото</h1>
-		<img src="images1.jpg">
+		<img src="images1.jpg"><br>
+		<p>Моя любимая команда в футболе</p>
 		<img src="dom.jpg">
+		<p>Мой дом</p>
 </body>
 </html>
