Снова поменял размеры картинок

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<nav class="menu">
-		<a href="photos.html"><img src="cvety.jpg"><p>Мои фото</p></a><br>
-		<a href="video.html"><img src="youtube.jpg"><p>Мои видео</p></a><br>
-		<a href="music1.html"><img src="music.jpg"><p>Мои музыка</p></a><br>
+		<a href="photos.html"><img src="cvety.jpg" class="img2"><p>Мои фото</p></a><br>
+		<a href="video.html"><img src="youtube.jpg" class="img2"><p>Мои видео</p></a><br>
+		<a href="music1.html"><img src="music.jpg" class="img2"><p>Мои музыка</p></a><br>
 	</nav>
 	<h1>Мой сайт</h1>
 	<p>Привет Я Никита. Мне 13 лет. Увлекаюсь футболом,шахматами. Учусь в Лицее Номер 100.</p>
