--- a/photos.html
+++ b/photos.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<nav class="menu">
-		<a href="index.html"><img src="home.jpg"><p>Главная страница</p></a><br>
-		<a href="video.html"><img src="youtube.jpg"><p>Мои видео</p></a><br>
-		<a href="music1.html"><img src="music.jpg"><p>Мои музыка</p></a><br>
+		<a href="index.html"><img src="home.jpg" class="img2"><p>Главная страница</p></a><br>
+		<a href="video.html"><img src="youtube.jpg" class="img2"><p>Мои видео</p></a><br>
+		<a href="music1.html"><img src="music.jpg" class="img2"><p>Мои музыка</p></a><br>
 	</nav>
 	<h1>Мои фото</h1>
 		<img src="images1.jpg" class="img1"><br>
