--- a/video.html
+++ b/video.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<nav class="menu">
-		<a href="photos.html"><img src="cvety.jpg"><p>Мои фото</p></a><br>
-		<a href="index.html"><img src="home.jpg"><p>Главная страница</p></a><br>
-		<a href="music1.html"><img src="music.jpg"><p>Мои музыка</p></a><br>
+		<a href="photos.html"><img src="cvety.jpg" class="img2"><p>Мои фото</p></a><br>
+		<a href="index.html"><img src="home.jpg" class="img2"><p>Главная страница</p></a><br>
+		<a href="music1.html"><img src="music.jpg" class="img2"><p>Мои музыка</p></a><br>
 	</nav>
 	<h1>Moi video</h1>
 	<iframe src="https://www.youtube.com/watch?v=-PZsSWwc9xA&list=RDMMpbMwTqkKSps&index=3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
