--- a/music1.html
+++ b/music1.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<nav class="menu">
-		<a href="photos.html"><img src="cvety.jpg"><p>Мои фото</p></a><br>
-		<a href="video.html"><img src="youtube.jpg"><p>Мои видео</p></a><br>
-		<a href="index.html"><img src="home.jpg"><p>Главная страница</p></a><br>
+		<a href="photos.html"><img src="cvety.jpg" class="img2"><p>Мои фото</p></a><br>
+		<a href="video.html"><img src="youtube.jpg" class="img2"><p>Мои видео</p></a><br>
+		<a href="index.html"><img src="home.jpg" class="img2"><p>Главная страница</p></a><br>
 	</nav>
 	<h1>Moya musika</h1>
 	<audio controls src="heavy.mp3"></audio>
