Доделал проект(дополнял сайт текстом и картинками)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>kfkkhygy.</title>
+	<title>Мой сайт</title>
 	<link  rel="stylesheet" href="mainfinalineedit.css">
 	<meta charset="utf-8">
 </head>
@@ -12,6 +12,8 @@
 		<a href="music1.html"><img src="music.jpg" class="img2"><p>Мои музыка</p></a><br>
 	</nav>
 	<h1>Мой сайт</h1>
-	<p>Привет Я Никита. Мне 13 лет. Увлекаюсь футболом,шахматами. Учусь в Лицее Номер 100.</p>
+	<p>Привет Я Никита. Мне 13 лет. Увлекаюсь футболом,шахматами. Учусь в Лицее Номер 100. Люблю играть в CS:GO,PUBG. Учусь на 7-10 но есть 5 по Истории. Мой любимый предмет конечно Физ-Ра если её не считать то тогда Алгебра, а самы ужасный предмет История как и Украины так и Мировая. В выходные дни люблю поиграть в футбол или просто погулять. Играю за команду Подол за 4 состав.</p>
+	<img src="ghbdtn.jpg" class="img4">
+	<img src="CSGO.jpg" class="img4">
 </body>
 </html>
