--- a/music1.html
+++ b/music1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>gksdlvdsjghjskgsjgjkklhjgjke/ek</title>
+	<title>Мои любимые песни</title>
 	<link  rel="stylesheet" href="mainfinalineedit.css">
 </head>
 <body>
@@ -11,8 +11,11 @@
 		<a href="index.html"><img src="home.jpg" class="img2"><p>Главная страница</p></a><br>
 	</nav>
 	<h1>Moya musika</h1>
-	<audio controls src="heavy.mp3"></audio>
-	<audio controls src="chlorine.mp3"></audio>
-	<audio controls src="letyze.mp3"></audio>
+	<audio controls src="heavy.mp3" autoplay></audio><br>
+	<p>Twenty One Pilots-Heavydirtysoul</p>
+	<audio controls src="chlorine.mp3" autoplay></audio>
+	<p>Twenty One Pilots-Chlorine</p>
+	<audio controls src="letyze.mp3" autoplay></audio><br>
+	<p>Ryki Vverh-18 let yze</p>
 </body>
 </html>
