--- a/photos.html
+++ b/photos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>kfkkhygy.</title>
+	<title>Мои фотки</title>
 	<link  rel="stylesheet" href="mainfinalineedit.css">
 	<meta charset="utf-8">
 </head>
@@ -15,6 +15,10 @@
 		<img src="images1.jpg" class="img1"><br>
 		<p>Моя любимая команда в футболе</p>
 		<img src="dom.jpg" class="img1">
-		<p>Мой дом</p>
+		<p>Мой дом мечты</p>
+		<img src="chess.jpg" class="img1">
+		<p>Моя любимая игра</p>
+		<img src="dobivanie.jpg" class="img3">
+		<p>Мой класс</p>
 </body>
 </html>
