--- a/video.html
+++ b/video.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>gksdlvdsjghjskgsjgjkklhjgjke/ek</title>
+	<title>Мои любимые видео</title>
 	<link  rel="stylesheet" href="mainfinalineedit.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
 	<h1>Moi video</h1>
 	<iframe src="https://www.youtube.com/watch?v=-PZsSWwc9xA&list=RDMMpbMwTqkKSps&index=3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<iframe src="https://www.youtube.com/watch?v=V1Pl8CzNzCw&list=RDMMpbMwTqkKSps&index=10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<iframe src="https://www.youtube.com/watch?v=pbMwTqkKSps&list=RDMMpbMwTqkKSps&index=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe src="https://www.youtube.com/watch?v=pbMwTqkKSps&list=RDMMpbMwTqkKSps&index=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+	<p>Клипы на мои любимые песни</p>
 </body>
 </html>
