Добавил картинок(баг с видео не пофиксил)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 		<a href="music1.html"><img src="music.jpg" class="img2"><p>Мои музыка</p></a><br>
 	</nav>
 	<h1>Мой сайт</h1>
-	<p>Привет Я Никита. Мне 13 лет. Увлекаюсь футболом,шахматами. Учусь в Лицее Номер 100. Люблю играть в CS:GO,PUBG. Учусь на 7-10 но есть 5 по Истории. Мой любимый предмет конечно Физ-Ра если её не считать то тогда Алгебра, а самы ужасный предмет История как и Украины так и Мировая. В выходные дни люблю поиграть в футбол или просто погулять. Играю за команду Подол за 4 состав.</p>
-	<img src="ghbdtn.jpg" class="img4">
+	<p class="p1">Привет Я Никита. Мне 13 лет. Увлекаюсь футболом,шахматами. Учусь в Лицее Номер 100. Люблю играть в CS:GO,PUBG. Болею за сборные Украины,Франции,Испании и за клубы ПСЖ,Реал и Ливерпуль. Учусь на 7-10 но есть 5 по Истории. Мой любимый предмет конечно Физ-Ра если её не считать то тогда Алгебра, а самы ужасный предмет История как и Украины так и Мировая. В выходные дни люблю поиграть в футбол или просто погулять. Играю за команду Подол за 4 состав.</p>
 	<img src="CSGO.jpg" class="img4">
+	<img src="100licey.jpg" class="img4">
+	<img src="football.jpg" class="img4">
+	<img src="podol.jpg" class="img5">
+	<img src="psg1.jpg" class="img6">
 </body>
 </html>
