--- a/music1.html
+++ b/music1.html
@@ -11,10 +11,13 @@
 		<a href="index.html"><img src="home.jpg" class="img2"><p>Главная страница</p></a><br>
 	</nav>
 	<h1>Moya musika</h1>
+	<img src="heavy.jpg" class="img4"><br>
 	<audio controls src="heavy.mp3" autoplay></audio><br>
 	<p>Twenty One Pilots-Heavydirtysoul</p>
+	<img src="chlorine.jpg" class="img4"><br>
 	<audio controls src="chlorine.mp3" autoplay></audio>
 	<p>Twenty One Pilots-Chlorine</p>
+	<img src="letyze.jpg" class="img4"><br>
 	<audio controls src="letyze.mp3" autoplay></audio><br>
 	<p>Ryki Vverh-18 let yze</p>
 </body>
